:new: Add ts-sandbox project

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.idea/**/*
+.idea/**/**/*
 # Created by https://www.gitignore.io/api/go,node,java,csharp,python,android,intellij
 # Edit at https://www.gitignore.io/?templates=go,node,java,csharp,python,android,intellij
 
